...
    func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            
            let text = "Вы ответили на \(correctAnswers) из 10, попробуйте ещё раз!"
            
            let resultViewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть еще раз")
            viewController?.show(quiz: resultViewModel)
            
        } else {
            self.switchToNextQuestion()
...
